export const snapshot = {};

snapshot[`slugify_urls plugin 1`] = `3`;

snapshot[`slugify_urls plugin 2`] = `
{
  formats: [
    {
      includesPath: undefined,
      key: ".tmpl.ts",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".tmpl.js",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".tmpl.json",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".json",
      pageType: undefined,
    },
    {
      includesPath: undefined,
      key: ".md",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".js",
      pageType: undefined,
    },
    {
      includesPath: undefined,
      key: ".ts",
      pageType: undefined,
    },
    {
      includesPath: "_includes",
      key: ".njk",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".yaml",
      pageType: "page",
    },
    {
      includesPath: undefined,
      key: ".yml",
      pageType: "page",
    },
  ],
}
`;

snapshot[`slugify_urls plugin 3`] = `
{
  content: "<p>Page 2</p>\\n",
  data: {
    content: "Page 2\\n",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/chourizos-ao-vino/",
  },
  dest: {
    ext: ".html",
    path: "/chourizos-ao-vino/index",
  },
  src: {
    ext: ".md",
    path: "/Chourizos ao viño",
  },
}
`;

snapshot[`slugify_urls plugin 4`] = `
{
  content: "<p>Page 1</p>\\n",
  data: {
    content: "Page 1\\n",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/page-1/",
  },
  dest: {
    ext: ".html",
    path: "/page-1/index",
  },
  src: {
    ext: ".md",
    path: "/Page 1",
  },
}
`;

snapshot[`slugify_urls plugin 5`] = `
{
  content: "<p>Page 3</p>\\n",
  data: {
    content: "\\nPage 3\\n",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/paxina-numero/tres/",
  },
  dest: {
    ext: ".html",
    path: "/paxina-numero/tres/index",
  },
  src: {
    ext: ".md",
    path: "/page-3",
  },
}
`;
